--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -63,10 +63,31 @@ header.wrapper {
     font: 700 35px Quicksand;
     /* margin: 210px 0 20px 0; */
     margin: 65% 0 20px 0;
+    animation-delay: 0.4s;
 }
 
 .hero-section p {
     font: 500 22px Quicksand;
+    animation-delay: 0.6s;
+}
+
+@keyframes pop-in {
+  0% {
+    opacity: 0;
+    transform: translateY(-4rem) scale(.8);
+  }
+
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+.animate-pop-in {
+  /* Lets add some bouncing effect */
+  animation: pop-in .6s cubic-bezier(0, 0.9, 0.3, 1.2) forwards;
+  /* animation: pop-in .6s ease-out forwards; */
+  opacity: 0;
 }
 
 /** Features Section **/
@@ -233,10 +254,22 @@ footer {
 
   .hero-section {
     background: #ccc url('../img/hero-photo@1x.jpg') center center / cover no-repeat;
+    position: relative;
+  }
+
+  .hero-section::after {
+    content: " ";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 250px;
+    background: rgb(57,57,57);
+    background: linear-gradient(360deg, rgba(57,57,57,0.8) 0%, rgba(255,255,255,0) 100%);
   }
 
   .hero-section h2 {
-    margin-top: 380px;
+    margin-top: 450px;
     font-size: 40px;
   }
 
@@ -246,7 +279,9 @@ footer {
 
   .hero-section h2,
   .hero-section p {
-    color: #000;
+    color: #fff;
+    position: relative;
+    z-index: 10;
   }
 
   .cards-container {
