--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -71,6 +71,19 @@ header.wrapper {
     animation-delay: 0.6s;
 }
 
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes pop-in {
+  0% {
+    opacity: 0;
+    transform: translateY(-4rem) scale(.8);
+  }
+
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
+
 @keyframes pop-in {
   0% {
     opacity: 0;
@@ -85,8 +98,8 @@ header.wrapper {
 
 .animate-pop-in {
   /* Lets add some bouncing effect */
+  -webkit-animation: pop-in .6s cubic-bezier(0, 0.9, 0.3, 1.2) forwards; /* Safari 4.0 - 8.0 */
   animation: pop-in .6s cubic-bezier(0, 0.9, 0.3, 1.2) forwards;
-  /* animation: pop-in .6s ease-out forwards; */
   opacity: 0;
 }
 
